--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -332,6 +332,12 @@ For us this is difficult to comprehend. We also tried to increase the number of 
 \section{Conclusion and Future Work}
 \label{sec:cafw}
 
+The Doodle Jump game is suitable for applying a genetic algorithm. To use a HTML5 and JavaScript Doodle Jump implementation and JavaScript machine learning libraries made the developing process straightforward. Thus, we were able to quickly start adjusting the genetic algorithm functions and parameters. Thereby, we got nice results without having many issues. It is always fun to watch the genetic algorithm playing the game and to notice that it evolves.
+
+Due to the project's time limitation of one semester there are some components which still could be improved. The genetic algorithm should be able to reach infinite scores in the game. Maybe this is possible after investing some more time into the project. In future, a third input platform may be added and it can be investigated how to avoid the breakable platforms.
+
+Our repository\footnote{\url{https://github.com/marcelja/doodle-jump}} is available on GitHub.
+
 \newpage
 %%%% bibtex file %%%%%%
 \bibliographystyle{alphadin}
